[project]
name = "dokli"
version = "0.1.0"
description = "Dokploy CLI and TUI"
authors = [{ name = "Jony Kalavera", email = "mr.jony@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.8.2,<3",
    "pydantic-settings[yaml]>=2.4.0,<3",
    "humanize>=4.10.0,<5",
    "httpx>=0.28.1,<0.29",
]

[project.optional-dependencies]
tui = ["textual>=0.75.1,<0.76"]

[project.scripts]
dokli = "dokli.cli:app"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
plugins = [
  "pydantic.mypy"
]

[dependency-groups]
dev = [
    "ruff>=0.5.6,<0.6",
    "mypy>=1.11.1,<2",
    "pytest>=8.3.2,<9",
    "pytest-cov>=5.0.0,<6",
    "textual-dev>=1.5.1,<2",
    "types-tree-sitter>=0.20.1.20240311,<0.21",
    "types-setuptools>=71.1.0.20240726,<72",
    "types-pyyaml>=6.0.12.20240724,<7",
    "types-docutils>=0.21.0.20240724,<0.22",
    "tree-sitter>=0.22.3,<0.23",
    "types-tree-sitter-languages>=1.10.0.20240612,<2",
    "types-pygments>=2.18.0.20240506,<3",
    "datamodel-code-generator>=0.25.8,<0.26",
    "pytest-mock>=3.14.0,<4",
    "pytest-randomly>=3.16.0,<4",
    "polyfactory>=2.19.0,<3",
    "pytest-blockage>=0.2.4,<0.3",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
ignore_errors = true

[tool.ruff]

# Same as Black.
line-length = 119

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
exclude = ["__pycache__", ".pytest_cache", ".mypy_cache", ".venv",]

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "B", "T20", "TCH", "ASYNC", "U", "UP", "LOG", "G", "ERA", "SIM", "D" ]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "PLR0913", "PLR2004", ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.coverage.run]
branch = true
omit = [
    "*tests.py",
    "*test_*.py",
    "*_tests.py",
]
source = [
    "dokli/"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "logger = logging.getLogger.__name__.",
    "[A-Z_][A-Z0-9_]* = .*",
    "from .* import .*",
    "import .*",
    "if __name__ == .__main__.:",
    "collections.namedtuple"
]
skip_covered = true
ignore_errors = true
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
